--- a/src/explorer/BExplorer_ru_ru.resx
+++ b/src/explorer/BExplorer_ru_ru.resx
@@ -870,4 +870,7 @@
   <data name="ToDoStatus40" xml:space="preserve">
     <value>Завершить основные сюжетные миссии</value>
   </data>
+  <data name="HelpText" xml:space="preserve">
+    <value>Внимание! Инструмент ещё разрабатывается и может вызывать непредвиденные эффекты в файлах сохранений. Если Вы столкнулись с одним из них, пожалуйста, напишите нам об этом. И обязательно делайте резервные копии файлов перед использованием программы</value>
+  </data>
 </root>
