--- a/src/explorer/BExplorer_ru_ru.resx
+++ b/src/explorer/BExplorer_ru_ru.resx
@@ -873,4 +873,19 @@
   <data name="HelpText" xml:space="preserve">
     <value>Внимание! Инструмент ещё разрабатывается и может вызывать непредвиденные эффекты в файлах сохранений. Если Вы столкнулись с одним из них, пожалуйста, напишите нам об этом. И обязательно делайте резервные копии файлов перед использованием программы</value>
   </data>
+  <data name="bcgfile" xml:space="preserve">
+    <value>Файл настроек парковок BExplorer</value>
+  </data>
+  <data name="bfile" xml:space="preserve">
+    <value>Файл сохранения GTA Vice city</value>
+  </data>
+  <data name="bgrfile" xml:space="preserve">
+    <value>Файл настроек гаражей BExplorer</value>
+  </data>
+  <data name="bstfile" xml:space="preserve">
+    <value>Файл статистики BExplorer</value>
+  </data>
+  <data name="FileTab_RegisterButton" xml:space="preserve">
+    <value>&amp;Зарегистрировать ассоц. файлов</value>
+  </data>
 </root>
