--- a/src/explorer/BExplorer_ru_ru.resx
+++ b/src/explorer/BExplorer_ru_ru.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AlreadyStarted" xml:space="preserve">
-    <value>Программа «{0:S}» уже запущена</value>
+    <value>Программа {0:S} уже запущена</value>
   </data>
   <data name="AssetNumber" xml:space="preserve">
     <value>Накопитель №</value>
