--- a/src/explorer/BExplorer_ru_ru.resx
+++ b/src/explorer/BExplorer_ru_ru.resx
@@ -871,7 +871,9 @@
     <value>Завершить основные сюжетные миссии</value>
   </data>
   <data name="HelpText" xml:space="preserve">
-    <value>Внимание! Инструмент ещё разрабатывается и может вызывать непредвиденные эффекты в файлах сохранений. Если Вы столкнулись с одним из них, пожалуйста, напишите нам об этом. И обязательно делайте резервные копии файлов перед использованием программы</value>
+    <value>Инструмент редактирования файлов сохранений GTA Vice city
+
+Внимание! Инструмент ещё разрабатывается и может вызывать непредвиденные эффекты в файлах сохранений. Если Вы столкнулись с одним из них, пожалуйста, напишите нам об этом. И обязательно делайте резервные копии файлов перед использованием программы</value>
   </data>
   <data name="bcgfile" xml:space="preserve">
     <value>Файл настроек парковок BExplorer</value>
