--- a/src/explorer/BExplorer_en_us.resx
+++ b/src/explorer/BExplorer_en_us.resx
@@ -204,7 +204,7 @@ Do you want to open project's webpage to download actual version?</value>
     <value>bikers</value>
   </data>
   <data name="Gangs_7" xml:space="preserve">
-    <value>Vercetti's</value>
+    <value>Vercetti’s</value>
   </data>
   <data name="Gangs_8" xml:space="preserve">
     <value>golfers</value>
